# agent-eval-loop

./: .gitignore  pyproject.toml  run.py
agents/: critic_agent.py  hypothesis_critic.py  improver_agent.py  research_agent.py  skill_agent.py  task_agent.py
dashboard/: report.py
eval/: analysis.py  detectors.py  skills.py
loop/: db.py  orchestrator.py  research_loop.py
scripts/: setup.py  test_task_agent.py
tests/: test_analysis.py  test_critic_agent.py  test_detectors.py  test_improver_agent.py  test_orchestrator.py  test_report.py  test_research_agents.py  test_skills.py  test_task_agent.py
